src/test/deca/syntax/valid/main/test_main_empty.deca
// Description:
//    tests de programme correct et vide
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024