src/test/deca/syntax/invalid/expr/test_primary_expr.deca
// Description:
//    tests de programme syntaxiquement incorrects : ineq avec << au lieu de <
//
// Resultats:
//    Ligne 12:  missing ')' at ';'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = (1 + 2;
}